--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>6.8</version>
-    <scope>Test</scope>
+    <scope>compile</scope>
 	</dependency>
   <dependency>
         <groupId>log4j</groupId>
@@ -38,4 +38,30 @@
         <version>1.2.17</version>
 </dependency>
   </dependencies>
+  <build>
+	<sourceDirectory>src</sourceDirectory>
+		<plugins>
+			<!-- Compiler plug-in -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+			<!-- Below plug-in is used to execute tests -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.18.1</version>
+				<configuration>
+					<suiteXmlFiles>
+						<!-- TestNG suite XML files -->
+						<suiteXmlFile>VBZ0011-Associate Home.xml</suiteXmlFile>
+					</suiteXmlFiles>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
