--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
 					<suiteXmlFiles>
 						<!-- TestNG suite XML files -->
 						<suiteXmlFile>VBZ0011-Associate Home.xml</suiteXmlFile>
+						<suiteXmlFile>VBZ0010-Associate_Login.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
